# quaver

./: .gitignore  README.md  index.html  launch.bat  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  metadata.rs  scanner.rs  waveform.rs
