[package]
name = "quaver"
version = "1.0.0"
description = "A lightweight local music player"
authors = ["Niall"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21"
symphonia = { version = "0.5.4", features = ["all"] }
walkdir = "2.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chromaprint-next = "0.1.0"
tokio = { version = "1.52.3", features = ["rt", "time"] }

[profile.dev.package."*"]
opt-level = 3
